tests/spec/emit/snapshots/struct_field_access.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test(p: Point) {\n  p.x\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func test(p Point) {
	_ = p.x
}
