tests/spec/emit/snapshots/struct_field_go_interface_pattern_emits_type_switch.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  struct Box {
    e: events.Event,
  }
  
  fn describe(b: Box) -> int {
    match b {
      Box { e: events.Token(s) } => s.length(),
      _ => 0,
    }
  }
---
package main

import "example.com/events"

type Box struct {
	e events.Event
}

func describe(b Box) int {
	if func() bool { _, ok := b.e.(events.Token); return ok }() {
		return len(string(b.e.(events.Token)))
	}
	return 0
}
