tests/spec/emit/snapshots/struct_field_init_option_function.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  struct Wrapper {
    opt: Option<int>,
  }
  
  fn get_opt(b: bool) -> Option<int> {
    if b { Some(42) } else { None }
  }
  
  fn test() {
    let w = Wrapper { opt: get_opt(true) };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Wrapper struct {
	opt lisette.Option[int]
}

func getOpt(b bool) (int, bool) {
	if b {
		return 42, true
	}
	return 0, false
}

func test() {
	option := lisette.OptionFromCommaOk[int](getOpt(true))
	_ = Wrapper{opt: option}
}
