tests/spec/emit/snapshots/struct_go_keyword_type_name.snap
---
source: tests/spec/emit/functions.rs
description: "input: \nimport \"go:fmt\"\n\nstruct default {\n  value: int,\n}\n\nfn main() {\n  let x = default { value: 42 }\n  fmt.Println(x)\n}\n"
---
package main

import "fmt"

type default_ struct {
	value int
}

func main() {
	x := default_{value: 42}
	fmt.Println(x)
}
