tests/spec/emit/snapshots/struct_instantiation.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test() -> Point {\n  Point { x: 10, y: 20 }\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func test() Point {
	return Point{
		x: 10,
		y: 20,
	}
}
